# lucky_numbers

./: .gitignore  Cargo.toml  README.md
benches/: lucky_numbers_benchmark.rs
count-lucky-numbers/: Cargo.toml
count-lucky-numbers-server/: Cargo.toml
count-lucky-numbers-server/src/: main.rs
count-lucky-numbers/benches/: lucky_numbers_benchmark.rs
count-lucky-numbers/src/: count_lucky_numbers.rs  lib.rs  number_of_matches.rs
count-lucky-numbers/src/lucky_numbers_iterator/: lucky_numbers_iterator.rs  mod.rs  postfixed_lucky_numbers.rs  postfixed_lucky_numbers_iterator.rs  prefixed_lucky_numbers.rs  prefixed_lucky_numbers_iterator.rs
src/: lib.rs  main.rs
src/lucky_numbers/: mod.rs  postfixed_lucky_numbers.rs  prefixed_lucky_numbers.rs
