[package]
name = "lucky_numbers"
version = "0.1.0"
authors = ["John <jlek@findmypast.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.110", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"

[dev-dependencies.cargo-husky]
version = "1"
features = ["run-cargo-clippy"]
