[package]
name = "lucky_numbers"
version = "0.1.0"
authors = ["John <jlek@findmypast.com>"]
edition = "2018"

[dependencies]
rayon = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"

[dev-dependencies]
criterion = "0.3"

[dev-dependencies.cargo-husky]
version = "1"
features = ["run-cargo-clippy"]

[profile.bench]
lto = "fat"

[profile.release]
lto = "fat"

[[bench]]
name = "lucky_numbers_benchmark"
harness = false

