[package]
name = "count-lucky-numbers-server"
version = "0.1.0"
authors = ["John <jlek@findmypast.com>"]
edition = "2018"

[dependencies]
count-lucky-numbers = { path = "../count-lucky-numbers"}
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
warp = "0.2"

[dev-dependencies.cargo-husky]
version = "1"
features = ["run-cargo-clippy"]
