[package]
name = "count-lucky-numbers-server"
version = "0.1.0"
authors = ["John <jlek@findmypast.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
count-lucky-numbers = { path = "../count-lucky-numbers"}
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies.cargo-husky]
version = "1"
features = ["run-cargo-clippy"]
